[package]
name = "nodes"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "nodes"
path = "src/lib.rs"

[[bin]]
name = "nodecli"
path = "src/bin/nodecli.rs"

[dependencies]
anyhow = "1.0.40"
thiserror = "1.0.25"
